fix popover alignment in explorer and add tab

--- a/client/assets/styles/scss/popover/popover-add-tab.scss
+++ b/client/assets/styles/scss/popover/popover-add-tab.scss
@@ -4,7 +4,7 @@
 
   .arrow {
     left: auto !important; // right edge popover
-    right: 7px;
+    right: 4px;
   }
 
   .iconnables {
