--- a/client/assets/styles/scss/sidebar/sidebar.scss
+++ b/client/assets/styles/scss/sidebar/sidebar.scss
@@ -58,13 +58,6 @@
       width: 18px;
     }
   }
-
-  .btn-icon {
-    height: 30px;
-    line-height: 38px;
-    margin-top: -4px;
-    width: 30px;
-  }
 }
 
 // main sidebar
